Standardize brands.html layout, fix logo size, and update shop pages to match homepage format

--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
     <section class="about-section">
       <h1>Contact Us</h1>
       <p>For questions or to place an order, reach out to us:</p>
-      <p><strong>Email:</strong> info@modulargunworks.com</p>
-      <p><strong>Phone:</strong> (256) 555-0123</p>
+      <p><strong>Email:</strong> modulargunworks@gmail.com</p>
+      <p><strong>Phone:</strong> (256) 384-3852</p>
       <p><strong>Address:</strong> Huntsville, Alabama</p>
       <a href="contact.html" class="contact-button">Send us a message</a>
     </section>
