--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,8 @@
 
       <div class="contact-info">
         <h2>Other Ways to Reach Us</h2>
-        <p><strong>Email:</strong> info@modulargunworks.com</p>
-        <p><strong>Phone:</strong> (256) 555-0123</p>
+        <p><strong>Email:</strong> modulargunworks@gmail.com</p>
+        <p><strong>Phone:</strong> (256) 384-3852</p>
         <p><strong>Address:</strong> Huntsville, Alabama</p>
       </div>
     </section>
