--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
   <!-- CATEGORY NAVIGATION (STICKY) -->
   <nav class="category-nav">
     <a href="shop/ammunition.html">Ammunition</a>
-    <a href="shop/guns.md">Guns</a>
-    <a href="shop/magazines.md">Magazines</a>
-    <a href="shop/gun-parts.md">Gun Parts</a>
-    <a href="shop/gear.md">Gear</a>
-    <a href="shop/optics.md">Optics & Sights</a>
-    <a href="shop/reloading.md">Reloading</a>
-    <a href="shop/survival.md">Prep & Survival</a>
-    <a href="shop/brands.md">Brands</a>
-    <a href="shop/sale.md">ON SALE</a>
+    <a href="shop/guns.html">Guns</a>
+    <a href="shop/magazines.html">Magazines</a>
+    <a href="shop/gun-parts.html">Gun Parts</a>
+    <a href="shop/gear.html">Gear</a>
+    <a href="shop/optics.html">Optics & Sights</a>
+    <a href="shop/reloading.html">Reloading</a>
+    <a href="shop/survival.html">Prep & Survival</a>
+    <a href="shop/brands.html">Brands</a>
+    <a href="shop/sale.html">ON SALE</a>
   </nav>
  
   <!-- PROMO BANNER -
@@ -76,68 +76,60 @@
   <div class="grid">
 
     <a class="tile" href="shop/ammunition.html">
-  <div class="image-box">
-    <img src="images/categories/ammunition.jpg" alt="Ammunition">
-  </div>
-  <span>Ammunition</span>
-</a>
-    <a class="tile" href="shop/guns.md">
+      <div class="image-box">
+        <img src="images/categories/ammunition.jpg" alt="Ammunition">
+      </div>
+      <span>Ammunition</span>
+    </a>
+    <a class="tile" href="shop/guns.html">
       <div class="image-box">
         <img src="images/categories/guns.jpg" alt="Guns">
       </div>
       <span>Guns</span>
     </a>
-
-    <a class="tile" href="shop/magazines.md">
+    <a class="tile" href="shop/magazines.html">
       <div class="image-box">
         <img src="images/categories/magazines.jpg" alt="Magazines">
       </div>
       <span>Magazines</span>
     </a>
-
-    <a class="tile" href="shop/gun-parts.md">
+    <a class="tile" href="shop/gun-parts.html">
       <div class="image-box">
         <img src="images/categories/gun-parts.jpg" alt="Gun Parts">
       </div>
       <span>Gun Parts</span>
     </a>
-
-    <a class="tile" href="shop/gear.md">
+    <a class="tile" href="shop/gear.html">
       <div class="image-box">
         <img src="images/categories/gear.jpg" alt="Gear">
       </div>
       <span>Gear</span>
     </a>
-
-    <a class="tile" href="shop/optics.md">
+    <a class="tile" href="shop/optics.html">
       <div class="image-box">
         <img src="images/categories/optics.jpg" alt="Optics">
       </div>
       <span>Optics & Sights</span>
     </a>
-
-    <a class="tile" href="shop/reloading.md">
+    <a class="tile" href="shop/reloading.html">
       <div class="image-box">
         <img src="images/categories/reloading.jpg" alt="Reloading">
       </div>
       <span>Reloading</span>
     </a>
-
-    <a class="tile" href="shop/survival.md">
+    <a class="tile" href="shop/survival.html">
       <div class="image-box">
         <img src="images/categories/survival.jpg" alt="Survival">
       </div>
       <span>Prep & Survival</span>
     </a>
-
-    <a class="tile" href="shop/brands.md">
+    <a class="tile" href="shop/brands.html">
       <div class="image-box">
         <img src="images/categories/brands.jpg" alt="Brands">
       </div>
       <span>Shop by Brand</span>
     </a>
-
-    <a class="tile" href="shop/sale.md">
+    <a class="tile" href="shop/sale.html">
       <div class="image-box">
         <img src="images/categories/sale.jpg" alt="Sale">
       </div>
@@ -154,8 +146,7 @@
         <h4>Company</h4>
         <ul>
           <li><a href="about.html">About Modular Gunworks</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -163,26 +154,26 @@
       <div>
         <h4>Info</h4>
         <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">FFL Transfers</a></li>
-          <li><a href="#">Order Status</a></li>
-          <li><a href="#">Shipping Info</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="ffl.html">FFL Transfers</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
+          <li><a href="shipping.html">Shipping Info</a></li>
         </ul>
       </div>
 
       <div>
         <h4>Legal</h4>
         <ul>
-          <li><a href="#">Terms & Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Return Policy</a></li>
+          <li><a href="terms.html">Terms & Conditions</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="returns.html">Return Policy</a></li>
         </ul>
       </div>
     </div>
 
     <div class="footer-bottom">
       <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
-      <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
+      <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
   <!-- AGE VERIFICATION POPUP -->
