--- a/privacy.html
+++ b/privacy.html
@@ -58,16 +58,16 @@
 
   <!-- NAVIGATION -->
   <nav class="category-nav">
-    <a href="shop/ammunition.md">Ammunition</a>
-    <a href="shop/guns.md">Guns</a>
-    <a href="shop/magazines.md">Magazines</a>
-    <a href="shop/gun-parts.md">Gun Parts</a>
-    <a href="shop/gear.md">Gear</a>
-    <a href="shop/optics.md">Optics & Sights</a>
-    <a href="shop/reloading.md">Reloading</a>
-    <a href="shop/survival.md">Prep & Survival</a>
-    <a href="shop/brands.md">Brands</a>
-    <a href="shop/sale.md">ON SALE</a>
+    <a href="shop/ammunition.html">Ammunition</a>
+    <a href="shop/guns.html">Guns</a>
+    <a href="shop/magazines.html">Magazines</a>
+    <a href="shop/gun-parts.html">Gun Parts</a>
+    <a href="shop/gear.html">Gear</a>
+    <a href="shop/optics.html">Optics & Sights</a>
+    <a href="shop/reloading.html">Reloading</a>
+    <a href="shop/survival.html">Prep & Survival</a>
+    <a href="shop/brands.html">Brands</a>
+    <a href="shop/sale.html">ON SALE</a>
   </nav>
 <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
@@ -210,7 +210,7 @@
         <div class="policy-content">
           <p>If you have questions about this Privacy Policy or your personal information, please contact us:</p>
           <p><strong>Modular Gunworks LLC</strong><br>
-          Email: support@modulargunworks.com<br>
+          Email: modulargunworks@gmail.com<br>
           Phone: (XXX) XXX‑XXXX<br>
           Website: https://modulargunworks.com</p>
         </div>
@@ -238,7 +238,7 @@
         <button class="policy-toggle">Make a Privacy Request</button>
         <div class="policy-content">
           <p>You may submit a privacy request to access, delete, or correct your personal information by contacting us at:</p>
-          <p>Email: support@modulargunworks.com<br>
+          <p>Email: modulargunworks@gmail.com<br>
           Phone: (XXX) XXX‑XXXX</p>
         </div>
       </div>
@@ -296,7 +296,7 @@
 
     <div class="footer-bottom">
       <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
-      <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
+      <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
 
