--- a/shop/ammo-product.html
+++ b/shop/ammo-product.html
@@ -144,7 +144,7 @@
 
     <div class="footer-bottom">
       <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
-      <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
+      <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
 
