--- a/shop/magazines.html
+++ b/shop/magazines.html
@@ -63,8 +63,7 @@
 </div>
   <!-- MAGAZINES HERO -->
   <section class="magazines-hero">
-    <div class="magazines-hero-inner">
-      <h1>Magazines</h1>
+    <div class="magazines-hero-inner" style="text-align: center;">
       <p>High-capacity magazines for pistols, rifles, and specialty platforms</p>
     </div>
   </section>
@@ -158,15 +157,39 @@
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <div class="footer-content">
-      <p>&copy; 2024 Modular Gunworks LLC. All rights reserved.</p>
-      <p>FFL Dealer | Veteran Owned | Serving [Your Area]</p>
-      <nav class="footer-nav">
-        <a href="../about.html">About</a>
-        <a href="../contact.html">Contact</a>
-        <a href="../privacy.html">Privacy</a>
-        <a href="../terms.html">Terms</a>
-      </nav>
+    <div class="footer-columns">
+      <div>
+        <h4>Company</h4>
+        <ul>
+          <li><a href="about.html">About Modular Gunworks</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Info</h4>
+        <ul>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="ffl.html">FFL Transfers</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
+          <li><a href="shipping.html">Shipping Info</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="terms.html">Terms & Conditions</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="returns.html">Return Policy</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
+      <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
 
