--- a/terms.html
+++ b/terms.html
@@ -60,15 +60,15 @@
   <!-- NAVIGATION -->
   <nav class="category-nav">
     <a href="shop/ammunition.html">Ammunition</a>
-    <a href="shop/guns.md">Guns</a>
-    <a href="shop/magazines.md">Magazines</a>
-    <a href="shop/gun-parts.md">Gun Parts</a>
-    <a href="shop/gear.md">Gear</a>
-    <a href="shop/optics.md">Optics & Sights</a>
-    <a href="shop/reloading.md">Reloading</a>
-    <a href="shop/survival.md">Prep & Survival</a>
-    <a href="shop/brands.md">Brands</a>
-    <a href="shop/sale.md">ON SALE</a>
+    <a href="shop/guns.html">Guns</a>
+    <a href="shop/magazines.html">Magazines</a>
+    <a href="shop/gun-parts.html">Gun Parts</a>
+    <a href="shop/gear.html">Gear</a>
+    <a href="shop/optics.html">Optics & Sights</a>
+    <a href="shop/reloading.html">Reloading</a>
+    <a href="shop/survival.html">Prep & Survival</a>
+    <a href="shop/brands.html">Brands</a>
+    <a href="shop/sale.html">ON SALE</a>
   </nav>
 
   <!-- HERO FLAG HEADER (FULL WIDTH) -->
@@ -244,7 +244,7 @@
           </ul>
           <p>
             All returns may require a Return Authorization (RA) number. Instructions for initiating a return are
-            provided on our website or by contacting support@modulargunworks.com.
+            provided on our website or by contacting modulargunworks@gmail.com.
           </p>
         </div>
       </div>
@@ -1048,7 +1048,7 @@
           </p>
           <p>
             To request that we not “sell” your personal information under CCPA, you may email:
-            <strong>privacy@modulargunworks.com</strong> and include your name, email address, and a statement that you
+            <strong>modulargunworks@gmail.com</strong> and include your name, email address, and a statement that you
             are exercising your “Do Not Sell My Personal Information” rights under CCPA.
           </p>
         </div>
@@ -1110,7 +1110,7 @@
           <p>
             Modular Gunworks LLC<br>
             Huntsville, Alabama<br>
-            Email: <a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a><br>
+            Email: <a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a><br>
             Phone: (XXX) XXX‑XXXX
           </p>
         </div>
@@ -1154,7 +1154,7 @@
 
     <div class="footer-bottom">
       <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
-      <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
+      <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
 
