Fix homepage logo size by adding site-logo class to logo image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <header class="site-header">
   <div class="header-left">
     <a href="index.html" title="Return to Homepage">
-      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
+      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo site-logo" id="site-logo">
     </a>
   </div>
 
