Fix logo size on all shop pages by adding site-logo class to logo images

--- a/shop/ammo-product.html
+++ b/shop/ammo-product.html
@@ -11,7 +11,7 @@
 
   <header class="site-header">
     <div class="header-left">
-      <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo">
+      <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo site-logo">
     </div>
 
     <div class="header-center">
