--- a/shop/guns.html
+++ b/shop/guns.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Guns | Modular Gunworks LLC</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/png" href="../favicon.png">
 </head>
 
